--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-#title: Minimal theme
+title: Tecnología y algunos datos mas
 #logo: /assets/img/logo.png
 #description: Minimal is a theme for GitHub Pages.
 #show_downloads: true
