--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Tecnología y algunos datos mas
+title: Blog Tecnología - Manuel Pozo
 #logo: /assets/img/logo.png
-#description: Minimal is a theme for GitHub Pages.
-#show_downloads: true
+description: Tecnología y algunos datos mas
+show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
