--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Blog Tecnología - Manuel Pozo
+title: Tecnología
 #logo: /assets/img/logo.png
 description: Tecnología y algunos datos mas
 show_downloads: true
