--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Tecnología
+title: TechBlog
 #logo: /assets/img/logo.png
-description: Tecnología y algunos datos mas
+description: Proyectos software & Data
 show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
