--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: TechBlog
+title: Proyectos software & Data
 #logo: /assets/img/logo.png
-description: Proyectos software & Data
+description: TechBlog Manuel Pozo
 show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
