--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Proyectos software & Data
-#logo: /assets/img/logo.png
+logo: /Blog/thumbnail.png
 description: TechBlog Manuel Pozo
 show_downloads: true
 #google_analytics:
