--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Proyectos software & Data
-logo: /thumbnail.png
+logo: /assets/img/thumbnail2.png
 description: TechBlog Manuel Pozo
 show_downloads: true
 #google_analytics:
