--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Proyectos software & Data
+title: Proyectos Software & Data
 logo: /assets/img/thumbnail_2.png
-description: TechBlog Manuel Pozo
+description: Experiencias. Datos. Códgios
 show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
