--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Proyectos Software & Data
+title: TechBlog
 logo: /assets/img/thumbnail_2.png
 description: Experiencias. Datos. Códgios
 show_downloads: true
