--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: TechBlog
 logo: /assets/img/thumbnail_2.png
-description: Experiencias. Datos. Códgios
+description: Experiencias. Datos. Códigos
 show_downloads: true
 #google_analytics:
 theme: jekyll-theme-minimal
